Adding first public subnet

--- a/vpc-setup.yml
+++ b/vpc-setup.yml
@@ -24,6 +24,7 @@
          vpc_id: "{{vpcout.vpc.id}}"
          region: "{{ region }}"
          az: "{{ zone1 }}"
+         state: "{{state}}"
          cidr: "{{ PubSub1Cidr }}"
          map_public: yes
          resource_tags:
