--- a/vpc-setup.yml
+++ b/vpc-setup.yml
@@ -30,3 +30,27 @@
          resource_tags:
            Name: yuvi-pubsub1
       register: pubsub1_out
+
+    - name: create Public subnet 2 in Zone2
+      ec2_vpc_subnet:
+         vpc_id: "{{vpcout.vpc.id}}"
+         region: "{{ region }}"
+         az: "{{ zone2 }}"
+         state: "{{state}}"
+         cidr: "{{ PubSub2Cidr }}"
+         map_public: yes
+         resource_tags:
+           Name: yuvi-pubsub2
+      register: pubsub2_out
+
+    - name: create Public subnet 3 in Zone3
+      ec2_vpc_subnet:
+         vpc_id: "{{vpcout.vpc.id}}"
+         region: "{{ region }}"
+         az: "{{ zone3 }}"
+         state: "{{state}}"
+         cidr: "{{ PubSub3Cidr }}"
+         map_public: yes
+         resource_tags:
+           Name: yuvi-pubsub3
+      register: pubsub3_out
