--- a/vpc-setup.yml
+++ b/vpc-setup.yml
@@ -54,3 +54,39 @@
          resource_tags:
            Name: yuvi-pubsub3
       register: pubsub3_out
+
+    - name: create Private subnet 1 in Zone1
+      ec2_vpc_subnet:
+         vpc_id: "{{vpcout.vpc.id}}"
+         region: "{{ region }}"
+         az: "{{ zone1 }}"
+         state: "{{state}}"
+         cidr: "{{ PrivSub1Cidr }}"
+         map_public: yes
+         resource_tags:
+           Name: yuvi-privsub1
+      register: privsub1_out
+
+    - name: create Private subnet 2 in Zone2
+      ec2_vpc_subnet:
+         vpc_id: "{{vpcout.vpc.id}}"
+         region: "{{ region }}"
+         az: "{{ zone2 }}"
+         state: "{{state}}"
+         cidr: "{{ PrivSub2Cidr }}"
+         map_public: yes
+         resource_tags:
+           Name: yuvi-privsub2
+      register: privsub2_out
+
+    - name: create Private subnet 3 in Zone3
+      ec2_vpc_subnet:
+         vpc_id: "{{vpcout.vpc.id}}"
+         region: "{{ region }}"
+         az: "{{ zone3 }}"
+         state: "{{state}}"
+         cidr: "{{ PrivSub3Cidr }}"
+         map_public: yes
+         resource_tags:
+           Name: yuvi-privsub3
+      register: privsub3_out
