Adding first public subnet

--- a/vpc-setup.yml
+++ b/vpc-setup.yml
@@ -101,7 +101,7 @@
       register: igw_out
 
     - name: Set up public route table
-      ec2_route_table:
+      ec2_vpc_route_table:
          vpc_id: "{{ vpcout.vpc.id }}"
          region: "{{ region }}"
          tags:
