Adding first public subnet

--- a/vpc-setup.yml
+++ b/vpc-setup.yml
@@ -107,9 +107,9 @@
          tags:
            Name:  yuvi-PubRT
          subnets:
-           - "{{pubsub1_out.submet.id}}"
-           - "{{pubsub2_out.submet.id}}"
-           - "{{pubsub3_out.submet.id}}"
+           - "{{pubsub1_out.subnet.id}}"
+           - "{{pubsub2_out.subnet.id}}"
+           - "{{pubsub3_out.subnet.id}}"
          routes:
            - dest: 0.0.0.0/0
              gateway_id: "{{igw_out.gateway_id}}"
