--- a/baston-instances.yml
+++ b/baston-instances.yml
@@ -53,5 +53,6 @@
          Project: Yuviapp
          Owner: DevOps Team
        group_id: "{{BastionSG_out.group_id}}"
+       vpc_subnet_id: "{{pubsub1id}}"
      register: bastionHost_out
 
