Adding first public subnet

--- a/baston-instances.yml
+++ b/baston-instances.yml
@@ -18,7 +18,7 @@
     - name: store login key
       copy:
        content: "{{keyout.key.private_key}}"
-       dest: ./yuvivi_2023.pem
+       dest: "./yuvivi_2023.pem"
        mode: 0600
        when: keyout.changed
 
