Adding first public subnet

--- a/baston-instances.yml
+++ b/baston-instances.yml
@@ -42,7 +42,7 @@
        instance_type: t2.micro
        image: "{{bastion_ami}}"
        wait: yes
-       wait_timout: 300
+       wait_timeout: 300
        instance_tags:
           Name: "Bastion_host"
           project: Yuviapp
