--- a/baston-instances.yml
+++ b/baston-instances.yml
@@ -36,7 +36,7 @@
       register: BastionSG_out
 
     - name: Creating Bastion Host
-      ec2:
+      amazon.aws.ec2_instance:
         key_name: yuvivi_2023
         region: "{{region}}"
         instance_type: t2.micro
