--- a/baston-instances.yml
+++ b/baston-instances.yml
@@ -18,7 +18,7 @@
     - name: store login key
       copy:
        content: "{{key_out.key.private_key}}"
-       dest: "./yuvivi_2023.pem"
+       dest: "./yuvk_2023.pem"
        mode: 0600
       when: key_out.changed
 
@@ -37,7 +37,7 @@
 
     - name: Creating Bastion Host
       amazon.aws.ec2_instance:
-        key_name: yuvivi_2023
+        key_name: yuvk_2023
         region: "{{region}}"
         instance_type: t2.micro
         image: "{{bastion_ami}}"
