--- a/baston-instances.yml
+++ b/baston-instances.yml
@@ -40,7 +40,7 @@
         key_name: yuvk_2023
         region: "{{region}}"
         instance_type: t2.micro
-        image: "{{bastion_ami}}"
+        image_id: "{{bastion_ami}}"
         wait: yes
         wait_timeout: 300
         instance_tags:
