Adding first public subnet

--- a/baston-instances.yml
+++ b/baston-instances.yml
@@ -36,11 +36,11 @@
       register: BastionSG_out
 
     - name: Creating Bastion Host
-      amazon.aws.ec2_instance:
+      ec2_instance:
         key_name: yuvk_2023
         region: "{{region}}"
         instance_type: t2.micro
-        image_id: "{{bastion_ami}}"
+        image: "{{bastion_ami}}"
         wait: yes
         wait_timeout: 300
         instance_tags:
