--- a/baston-instances.yml
+++ b/baston-instances.yml
@@ -38,21 +38,11 @@
     - name: Creating Bastion Host
       ec2:
         key_name: yuvk_2023
-        region: "{{region}}"
         instance_type: t2.micro
         image: "{{image}}"
         wait: yes
         wait_timeout: 300
-        instance_tags:
-          Name: "Bastion_host"
-          project: Yuviapp
-          owner: Devops team
-        exact_count: 1
-        count_tag:
-          Name: "Bastion_host"
-          Project: Yuviapp
-          Owner: DevOps Team
-        group_id: "{{BastionSG_out.group_id}}"
+        count: 1
         vpc_subnet_id: "{{pubsub1id}}"
       register: bastionHost_out
 
