--- a/baston-instances.yml
+++ b/baston-instances.yml
@@ -10,7 +10,7 @@
 
     - name: example ec2 key
       ec2_key:
-        name: yuvivi_2023
+        name: yuvki_2023
         region: "{{region}}"
       register: key_out
 
@@ -18,7 +18,7 @@
     - name: store login key
       copy:
        content: "{{key_out.key.private_key}}"
-       dest: "./yuvk_2023.pem"
+       dest: "./yuvki_2023.pem"
        mode: 0600
       when: key_out.changed
 
@@ -39,19 +39,11 @@
       ec2:
         key_name: yuvk_2023
         region: "{{region}}"
-        instance_type: t2.micro
         image: "{{image}}"
         wait: yes
         group: Bastion-host-sg
         wait_timeout: 300
-        instance_tags:
-          Name: "Bastion_host"
-          project: Yuviapp
-          owner: Devops team
-        exact_count: 1
-        count_tag:
-          Name: "Bastion_host"
-          Project: Yuviapp
-          Owner: DevOps Team
+        count: 1
+
 
 
