--- a/baston-instances.yml
+++ b/baston-instances.yml
@@ -39,7 +39,7 @@
       ec2:
         key_name: yuvk_2023
         region: "{{region}}"
-        image: "ami-069d73f3235b535bd"
+        image: "069d73f3235b535bd"
 
 
 
