--- a/baston-instances.yml
+++ b/baston-instances.yml
@@ -36,10 +36,10 @@
       register: BastionSG_out
 
     - name: Creating Bastion Host
-      ec2:
+      ec2-instance:
         key_name: yuvk_2023
         region: "{{region}}"
-        image: "069d73f3235b535bd"
+        image: "ami-069d73f3235b535bd"
 
 
 
