--- a/baston-instances.yml
+++ b/baston-instances.yml
@@ -37,13 +37,24 @@
 
     - name: Creating Bastion Host
       ec2:
-        key_name: yuvki_2023
-        region: "{{region}}"
-        instance_type: t2.micro
-        image: "ami-069d73f3235b535bd"
-        wait: yes
-        count: 1
-        vpc_subnet_id: "{{pubsub1id}}"
+         key_name: yuvk_2023
+         region: "{{region}}"
+         vpc_subnet_id: "{{pubsub1id}}"
+         instance_type: t2.micro
+         security_group: Bastion-host-sg
+         image: "{{image}}"
+         wait: yes
+         wait_timeout: 300
+         instance_tags:
+           Name: "Bastion_host"
+           project: Yuviapp
+           owner: Devops team
+         exact_count: 1
+         count_tag:
+           Name: "Bastion_host"
+           Project: Yuviapp
+           Owner: DevOps Team
+      register: bastionHost_out
 
 
 
