--- a/baston-instances.yml
+++ b/baston-instances.yml
@@ -42,7 +42,7 @@
          vpc_subnet_id: "{{pubsub1id}}"
          instance_type: t2.micro
          security_group: Bastion-host-sg
-         image: "{{image}}"
+         image_id: "{{image}}"
          wait: yes
          wait_timeout: 300
          instance_tags:
