--- a/baston-instances.yml
+++ b/baston-instances.yml
@@ -37,6 +37,7 @@
 
     - name: Creating Bastion Host
       ec2_instance:
+         name: "Bastion_host"
          key_name: yuvk_2023
          region: "{{region}}"
          vpc_subnet_id: "{{pubsub1id}}"
@@ -45,11 +46,6 @@
          image_id: "{{image}}"
          wait: yes
          wait_timeout: 300
-         instance_tags:
-           Name: "Bastion_host"
-           project: Yuviapp
-           owner: Devops team
-         exact_count: 1
          count_tag:
            Name: "Bastion_host"
            Project: Yuviapp
