--- a/site.yml
+++ b/site.yml
@@ -1,3 +1,3 @@
------
-- import.playbook: vpc-setup.yml
-- import.playbook: baston-instances.yml
+----
+- import_playbook: vpc-setup.yml
+- import_playbook: baston-instances.ymlgit
