Adding first public subnet

--- a/baston-instances.yml
+++ b/baston-instances.yml
@@ -3,7 +3,7 @@
   gather_facts: False
   tasks:
     - name: Import VPC variable
-      include_vars: vars/bastion_setup
+      include_vars: vars/vpc_setup
 
     - name: Import VPC setup variable
       include_vars: vars/output_vars
