--- a/yuvi-ec2-stack.yml
+++ b/yuvi-ec2-stack.yml
@@ -43,7 +43,7 @@
           region: "{{region}}"
           vpc_id: "{{vpcid}}"
           purge_rules: no
-          rules:
+          rule:
                  - proto: tcp
                    from_port: 80
                    to_port: 80
@@ -62,6 +62,6 @@
           region: "{{region}}"
           vpc_id: "{{vpcid}}"
           purge_rules: no
-          rules:
+          rule:
            - proto: all
              group_id: "{{yuviStackSG_out.group_id}}"
