--- a/yuvi-ec2-stack.yml
+++ b/yuvi-ec2-stack.yml
@@ -29,7 +29,7 @@
          description: Allow port 80 from everywhere and allow port within sg
          region: "{{region}}"
          vpc_id: "{{vpcid}}"
-         rule:
+         rules:
            - proto: tcp
              from_port: 80
              to_port: 80
@@ -42,8 +42,8 @@
           description: Allow port 22 from everywhere and allow port within sg
           region: "{{region}}"
           vpc_id: "{{vpcid}}"
-          purge_rule: no
-          rule:
+          purge_rules: no
+          rules:
                  - proto: tcp
                    from_port: 80
                    to_port: 80
@@ -61,7 +61,7 @@
           description: allow port 22 from everywhere and all port within sg
           region: "{{region}}"
           vpc_id: "{{vpcid}}"
-          purge_rule: no
-          rule:
+          purge_rules: no
+          rules:
            - proto: all
              group_id: "{{yuviStackSG_out.group_id}}"
