--- a/yuvi-ec2-stack.yml
+++ b/yuvi-ec2-stack.yml
@@ -186,8 +186,8 @@
 
     - name: Copy login key to provision_stack directory
       copy:
-        src: loginkey_yuvi.pem
-        dest: provision-stack/loginkey_yuvi.pem
+        src: yuvki_2023.pem
+        dest: provision-stack/yuvki_2023.pem
         mode: '0400'
 
     - name: Insert/update Inventory file provision-stack
@@ -228,6 +228,6 @@
 
            [stack_inst:vars]
             ansible_user=ubuntu
-            ansible_ssh_private_key_file=loginkey_yuvi.pem
+            ansible_ssh_private_key_file=yuvki_2023.pem
             #ansible_python_interpreter=/usr/bin/python3
 
