--- a/provision-stack/rabbitmq.yml
+++ b/provision-stack/rabbitmq.yml
@@ -29,6 +29,7 @@
       apt_key:
         url: https://github.com/rabbitmq/signing-keys/releases/download/2.0/rabbitmq-release-signing-key.asc
         state: present
+        update_cache: yes
       tags:
         - package
 
