--- a/provision-stack/rabbitmq.yml
+++ b/provision-stack/rabbitmq.yml
@@ -25,6 +25,22 @@
       tags:
         - package
 
+   - name: Upgrade Erlang to version 24.3
+     apt:
+       name: erlang
+       state: latest
+       update_cache: yes
+     tags:
+       - package
+
+   - name: Install unixODBC
+     yum:
+       name: unixODBC
+       state: present
+     tags:
+       - package
+
+
     - name: Add an Apt signing key, uses whichever key is at the URL
       apt_key:
         url: https://github.com/rabbitmq/signing-keys/releases/download/2.0/rabbitmq-release-signing-key.asc
