--- a/provision-stack/rabbitmq.yml
+++ b/provision-stack/rabbitmq.yml
@@ -25,15 +25,6 @@
       tags:
         - package
 
-    - name: Upgrade Erlang to version 24.3
-      apt:
-        name: erlang
-        state: latest
-        update_cache: yes
-      tags:
-        - package
-
-
     - name: Add an Apt signing key, uses whichever key is at the URL
       apt_key:
         url: https://github.com/rabbitmq/signing-keys/releases/download/2.0/rabbitmq-release-signing-key.asc
@@ -41,17 +32,11 @@
       tags:
         - package
 
-    - name: install rabbitmq package
-      apt:
-        deb: https://github.com/rabbitmq/rabbitmq-server/releases/download/v3.9.13/rabbitmq-server_3.9.13-1_all.deb
+    - apt_repository:
+        repo: deb https://dl.bintray.com/rabbitmq/debian bionic main
+        state: present
       tags:
         - package
-
-    #- apt_repository:
-        #repo: deb https://dl.bintray.com/rabbitmq/debian bionic main
-        #state: present
-      #tags:
-        #- package
 
     - name: Install Rabbit MQ
       apt:
