--- a/provision-stack/rabbitmq.yml
+++ b/provision-stack/rabbitmq.yml
@@ -35,6 +35,7 @@
     - apt_repository:
         repo: deb https://dl.bintray.com/rabbitmq/debian bionic main
         state: present
+        update_cache: true
       tags:
         - package
 
